# esp32

./: .gitignore  .gitmodules  README.md
.github/workflows/: main.yml
docs/: building_cppcheck.md
esp32/: CMakeLists.txt  project.yml  run_cppcheck.sh
esp32/docs/: doxyfile
esp32/main/: CMakeLists.txt  board.c  board.h  board_dev.h  board_fs.c  board_fs.h  board_ps.c  board_ps.h  board_sw.c  board_sw.h  control.c  control.h  drv_i2c_ads1115.c  drv_i2c_ads1115.h  drv_i2c_ms5525dso.c  drv_i2c_ms5525dso.h  drv_i2c_sfm3000.c  drv_i2c_sfm3000.h  drv_i2c_sfm3019.c  drv_i2c_sfm3019.h  drv_i2c_tca9548a.c  drv_i2c_tca9548a.h  hal.c  hal.h  link.c  link.h  main.c  main.h  serial_link.c  serial_link.h
esp32/report/misra/: misra.json
esp32/test/: test_drv_i2c_ms5525dso.c  test_drv_i2c_sfm3000.c  test_drv_i2c_tca9548a.c
esp32/test/support/: hal.c  hal.h
